# mailreactor

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  flake.nix  pyproject.toml  verify-setup.sh
.github/workflows/: benchmarks.yml  ci.yml
docs/: ci-cd-guide.md  environment-setup-guide.md
src/mailreactor/: __init__.py
src/mailreactor/api/: __init__.py
src/mailreactor/cli/: __init__.py
src/mailreactor/core/: __init__.py  events.py  imap_client.py  smtp_client.py
src/mailreactor/utils/: __init__.py
tests/: GREENMAIL-SETUP.md  README.md  conftest.py  docker-compose.test.yml  test_smoke.py
tests/e2e/: test_example.py
tests/integration/: test_example.py
tests/manual/: verify_library_mode.py
tests/performance/: test_api_latency.py  test_memory.py  test_startup.py
tests/security/: test_credential_leaks.py
tests/unit/: test_example.py
