[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailreactor"
version = "0.1.0"
description = "Headless email client with REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hans Stockhausen", email = "hc@vst.io"},
]
dependencies = [
    "imapclient>=3.0.0",  # Sprint 0 Task #3: IMAP client for E2E tests (will be used in Epic 2)
    # Additional dependencies added as implementation progresses
    # Will add FastAPI, aiosmtplib, etc. when building features
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",    # Sprint 0 Task #4: Async test support
    "pytest-cov",        # Sprint 0 Task #2: Coverage enforcement
    "pytest-benchmark",  # Sprint 0 Task #6: Performance benchmarks
    "httpx",             # Sprint 0 Task #4: FastAPI TestClient
    "psutil",            # Sprint 0 Task #6: Memory profiling
    "ruff",
    "pre-commit",        # Sprint 0 Task #2.3: Pre-commit hooks
    "detect-secrets",    # Sprint 0 Task #2.3: Secret detection in hooks
    # "safety",          # Sprint 0 Task #5: Requires auth - commented out, use pip-audit in future
    "mypy",
]

# [project.scripts]
# mailreactor = "mailreactor.cli:app"  # Added when CLI module implemented

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/mailreactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
